[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Fireball.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Fireball" type="Area2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 0.631373, 0, 1 )
scale = Vector2( 0.239998, 0.239998 )
texture = ExtResource( 2 )

[node name="LifetimeTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
